Fix order create view and serializer. Add order create tests. Fix item tests. Add default image for item
