# backend/orders/serializers.py
@@ -1,10 +1,8 @@
 from datetime import timedelta
-
 from django.db import IntegrityError, transaction
-from django.db.models import F
+
 from djoser.serializers import UserSerializer
 from rest_framework import serializers
-from goods.models import Item
 from orders.models import Order, OrderGoods, Address
 from users.models import Basket
 
@@ -39,29 +37,39 @@ class OrderSerializer(serializers.ModelSerializer):
 
 class OrderCreateSerializer(serializers.ModelSerializer):
     user = serializers.HiddenField(default=serializers.CurrentUserDefault())
-    goods = OrderGoodsSerializer(source='ordergoods_set', many=True)
+    goods = OrderGoodsSerializer(source='ordergoods_set', many=True, read_only=True)
 
     class Meta:
         model = Order
-        fields = ('address', 'goods', 'user')
+        exclude = ('item',)
+        read_only_fields = ('code', 'user', 'created', 'updated', 'receive', 'status', 'goods')
 
     def create(self, validated_data):
         with transaction.atomic():
             try:
-                goods = validated_data.pop('ordergoods_set', [])
-
                 order = super().create(validated_data)
 
-                for item in goods:
-                    curr_item = Item.objects.get(pk=item.get('id'))
-                    amount = item.get('amount')
+                basket = Basket.objects.filter(user=order.user)
 
-                    OrderGoods.objects.create(amount=amount, item=curr_item, order=order)
+                if not basket:
+                    raise serializers.ValidationError({'goods': ['В корзине отсутствуют товары.']})
 
-                    curr_item.amount = F('amount') - amount
+                for basket_item in basket:
+                    item = basket_item.item
 
-                    curr_item.save()
-                # Basket.objects.filter(user=user).delete()
+                    amount = basket.get(item=item).amount
+
+                    OrderGoods.objects.create(amount=amount, item=item, order=order)
+
+                    item.amount -= amount
+
+                    if item.amount < 0:
+                        raise serializers.ValidationError(
+                            {item.name: [f'Данного товара в количестве {amount} шт. нет в наличии']})
+
+                    item.save()
+
+                Basket.objects.filter(user=order.user).delete()
 
                 return order
             except IntegrityError:
@@ -78,17 +86,18 @@ class OrderUpdateSerializer(serializers.ModelSerializer):
         read_only_fields = ('code', 'user', 'created', 'goods', 'updated')
 
     def update(self, instance, validated_data):
-        if instance.status == Order.Status.CANCELED:
-            raise serializers.ValidationError({'status': ['Заказ уже отменен.']})
+        with transaction.atomic():
+            if instance.status == Order.Status.CANCELED:
+                raise serializers.ValidationError({'status': ['Заказ уже отменен.']})
 
-        receive = validated_data.get('receive', None)
+            receive = validated_data.get('receive', None)
 
-        if receive:
-            if instance.created + timedelta(days=1) > receive:
-                raise serializers.ValidationError(
-                    {'receive': ['Дата получения должна быть позже дня создания как минимум на один день.']})
+            if receive:
+                if instance.created + timedelta(days=1) > receive:
+                    raise serializers.ValidationError(
+                        {'receive': ['Дата получения должна быть позже дня создания как минимум на один день.']})
 
-        return super().update(instance, validated_data)
+            return super().update(instance, validated_data)
 
 
 class OrderDeleteSerializer(serializers.ModelSerializer):
